update commit rpas

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,13 +8,14 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+      <ion-img src="/assets/banner.jpg"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-title>App RPAS</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>A Revista Pan-Amazônica de Saúde (RPAS) é publicada, desde 2010, sob a responsabilidade do Instituto Evandro Chagas, órgão vinculado à Secretaria de Vigilância em Saúde do Ministério da Saúde. </p>
+        
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
