update issues page

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+      RPAS
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+	<ion-card *ngFor="let issue of data?.issues" (click)="getIssue(issue)">
+		<ion-card-header>
+		    <ion-card-subtitle>Jan-mar</ion-card-subtitle>
+		    <ion-card-title>V.7 n.1(2016)</ion-card-title>
+		  </ion-card-header>
+	</ion-card>
+</ion-content>
