--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      RPAS
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,33 +10,22 @@
     <ion-card class="welcome-card">
       <ion-img src="/assets/banner.jpg"></ion-img>
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>App RPAS</ion-card-title>
+        <ion-card-subtitle>Aplicativo</ion-card-subtitle>
+        <ion-card-title>RPAS</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <p>A Revista Pan-Amazônica de Saúde (RPAS) é publicada, desde 2010, sob a responsabilidade do Instituto Evandro Chagas, órgão vinculado à Secretaria de Vigilância em Saúde do Ministério da Saúde. </p>
         
       </ion-card-content>
     </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+    
+    <ion-text >
+      <h1>CLASSIFICAÇÃO QUALIS/CAPES 2015 (atualizado em janeiro/2017):</h1>
+
+      <p>
+      B1 em Ensino<br>
+      B3 em Planejamento Urbano e Regional / Demografia <br>
+      B4 em Enfermagem, História, Odontologia <br>
+      B5 em Biotecnologia, Ciências Agrárias I, Ciências Ambientais, Ciências Biológicas III, Engenharia III, Medicina I, Medicina II, Medicina Veterinária, Saúde Coletiva</p>
+    </ion-text>
 </ion-content>
