access api endpoint

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,26 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      RPAS
-    </ion-title>
+      <ion-img src="/assets/banner.jpg"></ion-img>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/banner.jpg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Aplicativo</ion-card-subtitle>
-        <ion-card-title>RPAS</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>A Revista Pan-Amazônica de Saúde (RPAS) é publicada, desde 2010, sob a responsabilidade do Instituto Evandro Chagas, órgão vinculado à Secretaria de Vigilância em Saúde do Ministério da Saúde. </p>
+<ion-content padding>
         
-      </ion-card-content>
-    </ion-card>
-    
     <ion-text >
-      <h1>CLASSIFICAÇÃO QUALIS/CAPES 2015 (atualizado em janeiro/2017):</h1>
+      
+      <p>A Revista Pan-Amazônica de Saúde (RPAS) é publicada, desde 2010, sob a responsabilidade do Instituto Evandro Chagas, órgão vinculado à Secretaria de Vigilância em Saúde do Ministério da Saúde. </p>
+      
+      <h3>CLASSIFICAÇÃO QUALIS/CAPES 2015 (atualizado em janeiro/2017):</h3>
 
       <p>
       B1 em Ensino<br>
