--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="tab2">
       <ion-icon name="home"></ion-icon>
       <ion-label>Início</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
+    <ion-tab-button tab="tab3">
+      <ion-icon name="paper"></ion-icon>
       <ion-label>Fascículos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Minhas Submissões</ion-label>
+    <ion-tab-button tab="tab1">
+      <ion-icon name="alert"></ion-icon>
+      <ion-label>Sobre</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
